--- a/src/blocks/card/__del-button.css/_remove/card__del-button_remove.css
+++ b/src/blocks/card/__del-button.css/_remove/card__del-button_remove.css
@@ -1,4 +1,5 @@
 .card__del-button_remove {
-    background: transparent;
-    color: transparent;
+    /*background: transparent;*/
+    /*color: transparent;*/
+    visibility: hidden;
 }
