--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,4 +1,6 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   margin: 0px 0px 38.25px 0px;
   min-width: 320px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
