--- a/src/blocks/login/__button-enter/login__button-enter.css
+++ b/src/blocks/login/__button-enter/login__button-enter.css
@@ -1,5 +1,5 @@
 .login__button-enter {
-    margin: 216px auto 112px auto;
+    margin: 186px auto 0px auto;
     padding: 0;
     width: 358px;
     height: 50px;
@@ -10,7 +10,7 @@
     font-size: 18px;
     line-height: 22px;
     text-align: center;
-    border: 0;
+    border: none;
     border-radius: 2px;
 }
 
