--- a/src/blocks/popup/__title/_tooltip/popup__title_tooltip.css
+++ b/src/blocks/popup/__title/_tooltip/popup__title_tooltip.css
@@ -1,12 +1,12 @@
-.login__title{
+.popup__title_tooltip{
+    position: relative;
     width: 358px;
-    height: 29px;
-    margin: 24px 461px 50px 461px;
-    font-family: 'Inter';
+    height: 58px;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
     text-align: center;
-    color: #FFFFFF;
+    color: #000000;
+    margin:0px auto 60px auto;
 }
