--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 /* header*/
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__login-register/header__login-register.css);
+@import url(./blocks/header/__userInformations/header__userInformations.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__logoutUser/header__logoutUser.css);
 
 /* profile */
 @import url(./blocks/profile/profile.css);
@@ -43,6 +47,7 @@
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/__title/_tooltip/popup__title_tooltip.css);
 @import url(./blocks/popup/__text/popup__text.css);
 @import url(./blocks/popup/__text/_type-error/popup__text_type-error.css);
 @import url(./blocks/popup/__error/_visible/popup__error_visible.css);
@@ -54,6 +59,7 @@
 @import url(./blocks/popup/__picture-container/popup__picture-container.css);
 @import url(./blocks/popup/__picture-close/popup__picture-close.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__image/_tooltip/popup__image_tooltip.css);
 @import url(./blocks/popup/__picture-title/__title/popup__picture-title.css);
 @import url(./blocks/popup/_overlay/popup_overlay.css);
 
