--- a/src/blocks/login/__form/login__form.css
+++ b/src/blocks/login/__form/login__form.css
@@ -9,3 +9,9 @@
     margin-top: 60px;
     paddind: 0;
 }
+
+@media (min-width: 1024px) {
+    .login__form{
+        /*margin-bottom: auto;*/
+    }
+}
