--- a/src/blocks/login/__text/login__text.css
+++ b/src/blocks/login/__text/login__text.css
@@ -1,6 +1,6 @@
-.login__text{
+.login__text {
     margin: 0;
-    margin-bottom: 32px;
+    margin-bottom: 30px;
     margin-left: 22px;
     font-style: normal;
     font-weight: normal;
@@ -20,6 +20,7 @@
     background: transparent;
 
 }
+
 @-webkit-keyframes autofill {
     to {
         color: #000;
@@ -30,4 +31,11 @@
 input:-webkit-autofill {
     -webkit-animation-name: autofill;
     -webkit-animation-fill-mode: both;
+}
+
+@media screen and (max-width: 320px) {
+    .login__text {
+        max-width: 260px;
+        height: 27px;
+    }
 }
