--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,4 @@
 @import url(./blocks/login/__text/login__text.css);
 @import url(./blocks/login/__field/login__field.css);
 @import url(./blocks/login/__button-enter/login__button-enter.css);
+@import url(./blocks/login/__link-entry/login__link-entry.css);
