--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,16 +1,23 @@
 .footer {
-  margin: 0px auto 0px auto;
-  padding-bottom: 36px;
-  max-width: 282px;
-  background-color: #000000;
+    margin: 0px auto 0px auto;
+    padding-bottom: 36px;
+    max-width: 282px;
+    background-color: #000000;
+    max-height: calc(100vh - 14px);
 }
+
 @media screen and (min-width: 768px) {
-  .footer {
-  max-width: 730px;
-  }
+    .footer {
+        max-width: 730px;
+        max-height: calc(100vh - 14px);
+    }
 }
+
 @media screen and (min-width: 1024px) {
-  .footer {
-  max-width: 880px;
-  }
+    .footer {
+        max-width: 880px;
+        /*min-height: calc(100vh - 14px);*/
+        /*min-height: calc(100vh - 30px - 18px);*/
+        /*margin: 227px auto auto auto;*/
+    }
 }
