--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -3,7 +3,11 @@
     width: 22px;
     position: absolute;
     margin: 2px 153px 0px 0px;
+}
 
-    
+@media screen and (max-width:320px){
+    .header__email{
+        position: relative;
+    }
 
 }
