--- a/src/blocks/header/__login-register/header__login-register.css
+++ b/src/blocks/header/__login-register/header__login-register.css
@@ -1,4 +1,4 @@
-.header__login-register{
+.header__login-register {
     outline: none;
     text-decoration: none;
     color: #FFFFFF;
@@ -11,4 +11,13 @@
     text-align: right;
     /*position: absolute;*/
     margin: auto 0;
+}
+
+@media screen and (max-width: 320px) {
+    .header__login-register {
+        height: 17px;
+        font-size: 14px;
+        line-height: 17px;
+        margin-right: 30px;
+    }
 }
