--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,13 +1,17 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 0px 0px 38.25px 0px;
+  flex-direction: column-reverse;
+  margin: 27px 0px 38.25px 0px;
   min-width: 320px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+
 }
 @media screen and (min-width: 768px) {
   .header {
+    flex-direction: row;
     margin: 0 auto;
+    justify-content: space-between;
     margin-bottom: 36.25px;
     max-width: 581px;
   }
@@ -15,5 +19,7 @@
 @media screen and (min-width: 1024px) {
   .header {
     max-width: 880px;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
