--- a/src/blocks/popup/__image/_tooltip/popup__image_tooltip.css
+++ b/src/blocks/popup/__image/_tooltip/popup__image_tooltip.css
@@ -5,3 +5,9 @@
     margin: 60px auto 32px auto;
     position: relative;
 }
+
+@media screen and (max-width: 320px){
+    .popup__image_tooltip{
+        margin: 50px auto 0px auto;
+    }
+}
