--- a/src/blocks/popup/__title/_tooltip/popup__title_tooltip.css
+++ b/src/blocks/popup/__title/_tooltip/popup__title_tooltip.css
@@ -10,3 +10,14 @@
     color: #000000;
     margin:0px auto 60px auto;
 }
+
+@media screen and (max-width: 320px) {
+    .popup__title_tooltip{
+        margin: 40px 18px 50px 18px;
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 24px;
+        max-width: 244px;
+        height: 48px;
+    }
+}
