--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -1,13 +1,14 @@
-.header__email{
-    height: 141px;
-    width: 22px;
-    position: absolute;
-    margin: 2px 153px 0px 0px;
+.header__email {
+    height: 22px;
+    width: 142px;
+    position: relative;
+    margin: 0px 24px 0px 0px;
 }
 
-@media screen and (max-width:320px){
-    .header__email{
+@media screen and (max-width: 320px) {
+    .header__email {
         position: relative;
+        text-align: center;
+        margin: 0px auto 18px auto;
     }
-
 }
