--- a/src/blocks/header/__userInformations/header__userInformations.css
+++ b/src/blocks/header/__userInformations/header__userInformations.css
@@ -1,16 +1,21 @@
 .header__userInformations {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
     flex-direction: row;
     position: relative;
-    margin-top:51px;
-    max-width:50%;
+    margin-top:auto;
+    margin-bottom: auto;
+    height:22px;
 }
+
 @media screen and (max-width: 320px) {
-    .header__userInformations{
-        min-width: 320px;
-        border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    .header__userInformations {
         flex-direction: column;
         align-items: center;
+        padding: 0;
+        margin-top: 13px;
+        margin-bottom: 40px;
     }
 }
