--- a/src/blocks/header/__logoutUser/header__logoutUser.css
+++ b/src/blocks/header/__logoutUser/header__logoutUser.css
@@ -1,4 +1,4 @@
-.header__logoutUser{
+.header__logoutUser {
     outline: none;
     text-decoration: none;
     color: #FFFFFF;
@@ -8,5 +8,14 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    position: absolute;
+    position: relative;
+}
+
+@media screen and (max-width: 320px) {
+    .header__logoutUser {
+        position: relative;
+        text-align: center;
+        min-width: 320px;
+        border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    }
 }
